--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "config": "^3.3.1",
+    "cross-fetch": "^3.0.6",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.10.5",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "transliteration": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,6 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "client": "npm run start ",
+    "server": "nodemon server/server.js",
     "dev": "concurrently \"nodemon server/server.js\" \"npm run client\" "
   },
   "eslintConfig": {
@@ -45,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "multer": "^1.4.2"
   }
 }
